2013-09-08 arnaud.fontaine
* ZODB Components: Revert 'Allow to execute runUnitTest for bt5 Test Components' to fix tests bootstrap.

2013-09-03 arnaud.fontaine
* ZODB Components: Workflow History must always be kept, so avoid an extra step for developers.

2013-08-28 arnaud.fontaine
* ZODB Components: Migrate Documents, Extensions and Tests.

2011-02-23 Minashe
* Initial release.